Fix menu with on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -25,7 +25,7 @@ img {
 
 .navigation-item {
   display:inline-block;
-  width: 32.67187%;
+  width: 32%;
 }
 
 .navigation-link {
